@@ -1,6 +1,5 @@
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 group = 'pe.plazavea'
@@ -16,17 +15,12 @@ repositories {
     mavenCentral()
 }
 
-javafx {
-    version = '25'
-    modules = ['javafx.controls', 'javafx.fxml']
-}
-
 application {
     mainClass = 'pe.plazavea.perecibles.App'
-    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
 }
 
 dependencies {
-    implementation 'org.controlsfx:controlsfx:11.2.1'
-    implementation 'de.jensd:fontawesomefx-fontawesome:4.7.0-9.1.2'
+    implementation 'com.formdev:flatlaf:3.6'
+    implementation 'com.formdev:flatlaf-extras:3.6'
+    implementation 'com.miglayout:miglayout-swing:11.4.2'
 }
